--- a/ooadprojectd/src/swing/ContactBook.form
+++ b/ooadprojectd/src/swing/ContactBook.form
@@ -205,6 +205,11 @@
           </SubComponents>
         </Container>
         <Container class="javax.swing.JScrollPane" name="ListContactsPanel">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="18" style="0"/>
+            </Property>
+          </Properties>
           <AuxValues>
             <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
           </AuxValues>
@@ -218,6 +223,9 @@
           <SubComponents>
             <Component class="javax.swing.JList" name="PersonToContactList">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="18" style="0"/>
+                </Property>
                 <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
                   <StringArray count="9">
                     <StringItem index="0" value="Item 1"/>
